--- a/ardeath/package.json
+++ b/ardeath/package.json
@@ -26,6 +26,7 @@
     "leaflet": "^1.6.0",
     "preact": "^10.1.0",
     "preact-render-to-string": "^5.1.2",
-    "react-leaflet": "^2.6.3"
+    "react-leaflet": "^2.6.3",
+    "whatwg-fetch": "^3.0.0"
   }
 }
