--- a/pdmp_dashboard/package.json
+++ b/pdmp_dashboard/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/bar": "^0.73.0",
+    "@nivo/calendar": "^0.73.0",
+    "@nivo/core": "^0.73.0",
+    "@nivo/line": "^0.73.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.0.1",
+    "d3-collection": "^1.0.7",
     "d3-fetch": "^3.0.1",
     "d3-scale": "^4.0.0",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
     "web-vitals": "^1.0.1"
