--- a/pdmp_dashboard/public/manifest.json
+++ b/pdmp_dashboard/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Opioid Dashboard",
+  "name": "Predicted Opioid Overdose Dashboard",
   "icons": [
     {
       "src": "favicon.ico",
