--- a/pdmp_dashboard/package.json
+++ b/pdmp_dashboard/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
+    "recharts": "^2.1.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
