--- a/pdmp_dashboard/package.json
+++ b/pdmp_dashboard/package.json
@@ -14,7 +14,6 @@
     "d3-collection": "^1.0.7",
     "d3-fetch": "^3.0.1",
     "d3-scale": "^4.0.0",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
@@ -22,6 +21,7 @@
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
     "recharts": "^2.1.9",
+    "sass": "^1.50.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
