--- a/pdmp_dashboard/package.json
+++ b/pdmp_dashboard/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.21",
     "recharts": "^2.1.9",
     "sass": "^1.50.1",
     "web-vitals": "^1.0.1"
